[tool.poetry]
name = "fng-admin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
quart = "^0.19.6"
quart-schema = {extras = ["pydantic"], version = "^0.20.0"}
black = "^24.4.2"
pillow = "^10.3.0"
pyscreenshot = "^3.1"
flake8 = "^7.0.0"
uvloop = "^0.19.0"
dataclasses-json = "^0.6.6"
dbus-next = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
